<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.androidhive.imagefilters.Register"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/imagination1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/textview"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/usernameInput"
            android:layout_alignRight="@+id/usernameInput"
            android:layout_below="@+id/usernameInput"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/passwordRepeatInput"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordInput"
            android:layout_alignStart="@+id/passwordInput"
            android:layout_below="@id/passwordInput"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordRepeatInput"
            android:layout_alignStart="@+id/passwordRepeatInput"
            android:layout_below="@+id/passwordRepeatInput"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/backbutton"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/signupbutton"
            android:layout_alignRight="@id/signupbutton"
            android:layout_below="@+id/signupbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/back_button" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
